# Lander_mujoco

./: .gitignore  MUJOCO_LOG.TXT  README.md  acados_ocp.json  controller.py  main.py  math_utils.py  model.py  mpc.py  nmpc_controller.py  pad.py  pyproject.toml  utils_math.py
c_generated_code/: Makefile  acados_sim_solver_crazyflie.c  acados_sim_solver_crazyflie.h  acados_solver.pxd  acados_solver_crazyflie.c  acados_solver_crazyflie.h  libacados_ocp_solver_crazyflie.dylib  main_crazyflie.c  main_sim_crazyflie.c
c_generated_code/crazyflie_model/: crazyflie_expl_ode_fun.c  crazyflie_expl_vde_adj.c  crazyflie_expl_vde_forw.c  crazyflie_model.h
crazyfile/: cf2.xml  scene.xml
models/: model_2.pt  model_9999.pt  policy.pt
policy/: policy_2.pt  policy_3.pt  policy_7.pt
src/: controller.py  model.py
