[project]
name = "my-mujoco-project"
version = "0.1.0"
description = "MuJoCo simulation project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mujoco>=3.8.0",
    "mujoco-python-viewer>=0.1.4",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "torch>=2.11.0",
    "glfw>=2.10.0",
    "pupil-apriltags==1.0.4.post11"
]
